--- a/backend/.env
+++ b/backend/.env
@@ -11,3 +11,5 @@ DEBUG=True
 ALGORITHM = "HS256"
 
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
+
+GITHUB_ACCESS_TOKEN = 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
